# rust_hls

./: .gitignore  Cargo.toml  README.adoc  README.md  buildDockerImage.sh  flake.nix  result  updateReadmes.sh
examples/: README
examples/adder/: README
examples/adder/rust_hls/adder_synthesized/: adder.v
examples/adder/src/: adder_synthesized.rs  lib.rs
examples/multiple_modules/: Cargo.toml
examples/multiple_modules/rust_hls/adder_synthesized/: adder.cpp  adder.ll
examples/multiple_modules/rust_hls/adder_synthesized/verilated_module/: Vadder___024root.h  Vadder___024root__DepSet_h3b1f4fa3__0__Slow.cpp  Vadder___024root__DepSet_h92c160b8__0.cpp  Vadder___024root__DepSet_h92c160b8__0__Slow.cpp
examples/multiple_modules/rust_hls/divider_synthesized/: divider.cpp  divider.ll  divider.v
examples/multiple_modules/rust_hls/divider_synthesized/verilated_module/: Vdivider.cpp  Vdivider.h  Vdivider__ConstPool_0.cpp  Vdivider__Syms.cpp  Vdivider__Syms.h  Vdivider__Trace__0.cpp  Vdivider__Trace__0__Slow.cpp  Vdivider___024root.h  Vdivider___024root__DepSet_hca278b80__0.cpp  Vdivider___024root__DepSet_hca278b80__0__Slow.cpp  Vdivider___024root__DepSet_he22922b2__0.cpp  Vdivider___024root__DepSet_he22922b2__0__Slow.cpp  Vdivider___024root__Slow.cpp  Vdivider__pch.h  state.hash
examples/multiple_modules/rust_hls/subtractor_synthesized/: adder.ll  adder.v  subtractor.cpp  subtractor.ll  subtractor.v
examples/multiple_modules/rust_hls/subtractor_synthesized/verilated_module/: Vsubtractor.cpp  Vsubtractor.h  Vsubtractor__Syms.cpp  Vsubtractor__Syms.h  Vsubtractor__Trace__0.cpp  Vsubtractor__Trace__0__Slow.cpp  Vsubtractor___024root.h  Vsubtractor___024root__DepSet_h70406573__0.cpp  Vsubtractor___024root__DepSet_h70406573__0__Slow.cpp  Vsubtractor___024root__DepSet_hc8fe2ab8__0.cpp  Vsubtractor___024root__DepSet_hc8fe2ab8__0__Slow.cpp  Vsubtractor___024root__Slow.cpp  Vsubtractor__pch.h  state.hash
examples/multiple_modules/src/: divider_synthesized.rs  lib.rs  subtractor_synthesized.rs
examples/multiplier/: README.md
examples/multiplier/rust_hls/multiplier_synthesized/: multiplier.ll  multiplier.v
examples/multiplier/rust_hls/verilated_libs/: verilated_config.h
examples/multiplier/src/: lib.rs
examples/using_rust_hls_modules/: Cargo.toml  README
examples/using_rust_hls_modules/src/: main.rs
extract_rust_hdl_interface/: Cargo.toml  README
extract_rust_hdl_interface/src/: extract_rust_hdl_interface.rs  lib.rs
rust_hls/: Cargo.toml
rust_hls/src/: buildscript_hls.rs  generated_file.rs  lib.rs  main.rs
rust_hls/src/buildscript_hls/: generate_verilator_shim.rs  perform_hls.rs  process_module.rs  verilated_libs.rs
rust_hls/src/buildscript_hls/find_modules/: extract_modules_from_file.rs
rust_hls/src/generated_file/: generate_rust_hdl_struct.rs
rust_hls_build/: Cargo.toml  README  README.md
rust_hls_build/src/: build.rs  buildscript.rs  compile_verilated_libs.rs  lib.rs
rust_hls_cli/: Cargo.toml  README.md
rust_hls_cli/src/: lib.rs  main.rs
rust_hls_core/: Cargo.toml  README  README.md
rust_hls_core/src/: build.rs  check_hls.rs  crate_file.rs  find_modules.rs  generated_file.rs  hash_comment.rs  lib.rs  module_path_helpers.rs  names.rs  perform_hls.rs  process_module.rs  verilated_libs.rs
rust_hls_core/src/find_modules/: extract_modules_from_file.rs
rust_hls_core/src/generated_file/: filename_to_module_path.rs
rust_hls_core/src/process_module/: generate_cargo_toml.rs  get_available_dependencies.rs
rust_hls_example/: Cargo.toml
rust_hls_example/rust_hls/other_module_synthesized/: other_function.cpp  other_function.ll  other_function.v
rust_hls_example/rust_hls/other_module_synthesized/verilated_module/: Vother_function.cpp  Vother_function.h  Vother_function__Slow.cpp  Vother_function__Syms.cpp  Vother_function__Syms.h
rust_hls_example/rust_hls/your_module_synthesized/: your_function.cpp  your_function.ll  your_function.v
rust_hls_example/rust_hls/your_module_synthesized/verilated_module/: Vyour_function.cpp  Vyour_function.h  Vyour_function__Slow.cpp  Vyour_function__Syms.cpp  Vyour_function__Syms.h  state.hash
rust_hls_example/src/: main.rs  other_module_synthesized.rs  your_module_synthesized.rs
rust_hls_examples/adder/: Cargo.toml
rust_hls_examples/adder/rust_hls/adder_synthesized/: adder.v
rust_hls_examples/adder/src/: adder_synthesized.rs
rust_hls_examples/multiplier/: Cargo.toml
rust_hls_examples/multiplier/rust_hls/multiplier_synthesized/: multiplier.cpp
rust_hls_examples/multiplier/src/: multiplier_synthesized.rs
rust_hls_examples/using_rust_hls_modules/: README  adder.v  multiplier.v
rust_hls_executor/: Cargo.toml  README
rust_hls_executor/src/: caching.rs  lib.rs  rust_hls.rs
rust_hls_generator/: Cargo.toml  README.md
rust_hls_generator/src/: generated_file.rs  lib.rs  perform_hls.rs  verilated_libs.rs
rust_hls_generator/src/generated_file/: generate_rust_hdl_struct.rs
rust_hls_macro/: Cargo.toml
rust_hls_macro/src/: hls_macro.rs
rust_hls_macro/tests/: fails_on_hls_function_without_module.rs  fails_on_missing_hls_function.rs  fails_on_multiple_hls_function.rs  fails_on_nested_module.rs  fails_on_unknown_arguments.rs  hls_attribute_is_invalid_on_enum.rs  progress.rs  simple_example.rs  supports_flag_arguments.rs  works_with_module_named_like_function.rs
rust_hls_macro_lib/: Cargo.toml  README
rust_hls_macro_lib/src/: lib.rs
rust_hls_script_generator/: Cargo.toml  README
rust_hls_script_generator/src/: generate_hls_script.rs  generate_llvm.rs  lib.rs
rust_hls_tools/: Cargo.toml  README
rust_hls_tools/src/: lib.rs
rust_hls_verilator/: Cargo.toml  README  README.md
rust_hls_verilator/src/: lib.rs  obtain_verilator_libs.rs  verilate_module.rs
rust_hls_verilator_shim/: Cargo.toml  README.md
rust_hls_verilator_shim/src/: generate_verilator_shim.rs  lib.rs
rust_hls_verilator_shim/src/generate_verilator_shim/: shim_generating_visitor.rs
spanned_error_message/: Cargo.toml
wrap_verilog_in_rust_hdl_macro/: Cargo.toml
(+30 files in other folders)
