[workspace]
resolver = "2"
members = [
    "rust_hls",
    "rust_hls_macro",
    "rust_hls_macro_lib",
    "rust_hls_verilator_shim",
    "rust_hls_verilator",
    "rust_hls_tools",
    "rust_hls_executor",
    "rust_hls_script_generator",
    "spanned_error_message",
    "rust_hls_examples/multiplier",
    "rust_hls_examples/adder",
    "rust_hls_examples/using_rust_hls_modules",
    "extract_rust_hdl_interface",
    "wrap_verilog_in_rust_hdl_macro",
]
exclude = ["*/test_suites/*", "*/target/*"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zebreus <lennarteichhorn@googlemail.com>"]
repository = "https://github.com/zebreus/rust_hls"

[workspace.dependencies]
rust_hls = { path = "rust_hls", version = "0.2.0" }
rust_hls_macro = { path = "rust_hls_macro", version = "0.2.0" }
rust_hls_macro_lib = { path = "rust_hls_macro_lib", version = "0.2.0" }
rust_hls_executor = { path = "rust_hls_executor", version = "0.2.0" }
rust_hls_script_generator = { path = "rust_hls_script_generator", version = "0.2.0" }
rust_hls_verilator_shim = { path = "rust_hls_verilator_shim", version = "0.2.0" }
rust_hls_verilator = { path = "rust_hls_verilator", version = "0.2.0" }
rust_hls_tools = { path = "rust_hls_tools", version = "0.2.0" }
adder = { path = "rust_hls_examples/adder" }
multiplier = { path = "rust_hls_examples/multiplier" }
spanned_error_message = { path = "spanned_error_message", version = "0.1.0" }
wrap_verilog_in_rust_hdl_macro = { path = "wrap_verilog_in_rust_hdl_macro", version = "0.2.0" }
extract_rust_hdl_interface = { path = "extract_rust_hdl_interface", version = "0.2.0" }
