[package]
name = "extract_rust_hdl_interface"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["rust-hdl", "verilog", "fpga"]
categories = ["development-tools::build-utils"]
homepage = "https://github.com/zebreus/bachelor-thesis/tree/master/bambu-macro/extract_rust_hdl_interface"
description = "Extracts the information needed for a rust-hdl module from a verilog module"

[dependencies]
itertools = "0.10.5"
sv-parser = "0.13.1"
