[package]
name = "rust_hls"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["verilog", "fpga", "hls", "high-level-synthesis", "bambu"]
categories = ["development-tools::build-utils", "compilers"]
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls"
description = "High level synthesis support for rust-hdl"

[features]
default = ["verilator"]
verilator = ["dep:verilator", "dep:verilated", "dep:verilated-module"]

[dependencies]
base64 = "0.21.0"
cargo_toml = "0.15.2"
derive_builder = "0.12.0"
directories = "5.0.0"
fs_extra = "1.3.0"
fslock = "0.2.1"
itertools = "0.10.5"
merkle_hash = "3.5.0"
rand = "0.8.5"
serde = "1.0.160"
tempfile = "3.5.0"
thiserror = "1.0.40"
toml = "0.7.3"
proc-macro2 = { version = "1.0.60", features = ["span-locations"] }
syn = { version = "2.0.18", features = [
    "full",
    "parsing",
    "extra-traits",
    "printing",
    "clone-impls",
    "derive",
    "visit",
    "visit-mut",
    "fold",
], default-features = false }
prettyplease = { version = "0.2.6", default-features = false }
quote = { version = "1.0.28", default-features = false }
glob = "0.3.1"
regex = "1.8.4"
convert_case = "0.6.0"
clap = { version = "4.3.4", features = ["derive"] }
extract_rust_hdl_interface.workspace = true
rust_hls_macro_lib.workspace = true
spanned_error_message.workspace = true
darling = "0.20.1"
rust_hls_script_generator.workspace = true

verilated = { path = "/home/lennart/Documents/verilated-rs/verilated", version = "0.1.0", optional = true }
verilated-module = { path = "/home/lennart/Documents/verilated-rs/verilated-module", version = "0.1.0", optional = true }
verilator = { path = "/home/lennart/Documents/verilated-rs/verilator", features = [
    "gen",
    "module",
], version = "0.1.0", optional = true }
rust_hls_executor.workspace = true

[dev-dependencies]
rust_hls_macro.workspace = true
