[package]
name = "rust_hls"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["verilog", "fpga", "hls", "high-level-synthesis", "bambu"]
categories = ["development-tools::build-utils", "compilers"]
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls"
description = "High level synthesis support for rust-hdl"

# Still figuring out which one is the most ergonomic
[[bin]]
name = "cargo-hls"
path = "src/main.rs"

# [[bin]]
# name = "cargo-rust_hls"
# path = "src/main.rs"

# [[bin]]
# name = "rust_hls"
# path = "src/main.rs"

[features]
default = ["verilator"]
verilator = ["rust_hls_core/verilator"]

[dependencies]
rust_hls_build.workspace = true
rust_hls_core.workspace = true
rust_hls_cli.workspace = true

[dev-dependencies]
rust_hls_macro.workspace = true
