[package]
name = "rust_hls_build"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["verilog", "fpga", "hls", "high-level-synthesis", "bambu"]
categories = ["development-tools::build-utils", "compilers"]
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls"
description = "This module provides functionality for processing crates with rust-hls annotations."

[features]
default = ["verilator"]
verilator = ["dep:cc"]

[dependencies]
thiserror = "1.0.40"
glob = "0.3.1"
rust_hls_core.workspace = true
rust_hls_executor.workspace = true
cc = { version = "1.0.81", optional = true }

[dev-dependencies]
rust_hls_macro.workspace = true
