[package]
name = "rust_hls_core"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["verilog", "fpga", "hls", "high-level-synthesis", "bambu"]
categories = ["development-tools::build-utils", "compilers"]
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls"
description = "This module provides functionality for processing crates with rust-hls annotations."

[features]
default = ["verilator"]
verilator = []

[dependencies]
cargo_toml = "0.15.2"
fs_extra = "1.3.0"
itertools = "0.10.5"
serde = "1.0.160"
tempfile = "3.5.0"
thiserror = "1.0.40"
toml = "0.7.3"
proc-macro2 = { version = "1.0.60", features = ["span-locations"] }
syn = { version = "2.0.18", features = [
    "full",
    "parsing",
    "extra-traits",
    "printing",
    "clone-impls",
    "derive",
    "visit",
    "visit-mut",
    "fold",
], default-features = false }
prettyplease = { version = "0.2.6", default-features = false }
quote = { version = "1.0.28", default-features = false }
glob = "0.3.1"
regex = "1.8.4"
rust_hls_macro_lib.workspace = true
spanned_error_message.workspace = true
darling = "0.20.1"
rust_hls_script_generator.workspace = true
convert_case = "0.6.0"

[dev-dependencies]
rust_hls_macro.workspace = true
