[package]
name = "rust_hls_executor"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["hls", "high-level-synthesis", "bambu"]
categories = ["development-tools::build-utils", "compilers"]
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls_executor"
description = "The part of rust_hls that is responsible for executing and caching the extracted crates"

[dependencies]
rust_hls_script_generator.workspace = true
cargo_toml = "0.15.2"
directories = "5.0.0"
fs_extra = "1.3.0"
fslock = "0.2.1"
rand = "0.8.5"
serde = "1.0.160"
thiserror = "1.0.40"
toml = "0.7.3"
rust_hls_macro_lib.workspace = true
