[package]
name = "rust_hls_generator"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["verilog", "fpga", "hls", "high-level-synthesis", "bambu"]
categories = ["development-tools::build-utils", "compilers"]
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls"
description = "This module provides functionality for processing crates with rust-hls annotations."

[features]
default = ["verilator"]
verilator = ["rust_hls_core/verilator"]

[dependencies]
itertools = "0.10.5"
tempfile = "3.5.0"
thiserror = "1.0.40"
proc-macro2 = { version = "1.0.60", features = ["span-locations"] }
syn = { version = "2.0.18", features = [
    "full",
    "parsing",
    "extra-traits",
    "printing",
    "clone-impls",
    "derive",
    "visit",
    "visit-mut",
    "fold",
], default-features = false }
prettyplease = { version = "0.2.6", default-features = false }
quote = { version = "1.0.28", default-features = false }
glob = "0.3.1"
extract_rust_hdl_interface.workspace = true
rust_hls_macro_lib.workspace = true
rust_hls_core.workspace = true
rust_hls_executor.workspace = true
rust_hls_verilator_shim.workspace = true
rust_hls_verilator.workspace = true

[dev-dependencies]
rust_hls_macro.workspace = true
