[package]
name = "rust_hls_macro"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["rust-hdl", "verilog", "fpga", "hls", "high-level-synthesis"]
categories = ["development-tools::build-utils", "compilers"]
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls_macro"
description = "High level synthesis support for rust-hdl"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
darling = "0.20.1"
proc-macro2 = { version = "1.0.56", features = ["span-locations"] }
quote = { version = "1.0.26" }
rust_hls_macro_lib.workspace = true
rust_hls_core.workspace = true
tempfile = "3.5.0"
thiserror = "1.0.40"

[dev-dependencies]
trybuild = { version = "1.0.80", features = ["diff"] }
