[package]
name = "rust_hls_macro_lib"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["rust_hls"]
categories = []
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls_macro_lib"
description = "Helper functions for rust_hls and rust_hls_macro"

[dependencies]
proc-macro2 = { version = "1.0.60" }
syn = { version = "2.0.18", features = [
    "full",
    "parsing",
    "extra-traits",
    "printing",
    "clone-impls",
    "derive",
    "visit",
    "visit-mut",
    "fold",
], default-features = false }
quote = { version = "1.0.28", default-features = false }
darling = "0.20.1"
prettyplease = "0.2.7"
convert_case = "0.6.0"
