[package]
name = "rust_hls_script_generator"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls_script_generator"
description = "The part of rust_hls that is responsible for generating bash scripts that perform hls using native tools"

[dependencies]
tempfile = "3.6.0"
rust_hls_macro_lib.workspace = true
fs_extra = "1.3.0"
thiserror = "1.0.40"
