[package]
name = "rust_hls_verilator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls_verilator"
description = "The part of rust_hls that is responsible for running verilator to generated verilated C++ code"


[dependencies]
thiserror = "1.0.40"
tempfile = "3.6.0"
docker-command = "5.0.0"
rust_hls_executor.workspace = true
rust_hls_tools.workspace = true
