[package]
name = "rust_hls_verilator_shim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/zebreus/rust_hls/tree/master/rust_hls_verilator_shim"
description = "The part of rust_hls that is responsible for generating a proxy to verilated verilog modules"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
proc-macro2 = { version = "1.0.60", features = ["span-locations"] }
syn = { version = "2.0.18", features = [
    "full",
    "parsing",
    "extra-traits",
    "printing",
    "clone-impls",
    "derive",
    "visit",
    "visit-mut",
    "fold",
], default-features = false }
quote = { version = "1.0.28", default-features = false }
fnv = "1.0.7"
rust_hls_macro_lib.workspace = true
extract_rust_hdl_interface.workspace = true

[dev-dependencies]
rust_hls_macro.workspace = true
