[package]
name = "spanned_error_message"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["buildscript", "cargo", "error", "message", "span"]
# TODO: Add categories
categories = [
    "development-tools::procedural-macro-helpers",
    "command-line-interface",
]
homepage = "https://github.com/zebreus/rust_hls/tree/master/spanned_error_message"
description = "Pretty error messages with spans outside of proc macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.60", features = ["span-locations"] }
