[package]
name = "wrap_verilog_in_rust_hdl_macro"
version = "0.1.1"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["rust-hdl", "verilog", "fpga", "wrap", "macro"]
categories = ["development-tools::build-utils", "compilers"]
homepage = "https://github.com/zebreus/rust_hls/tree/master/wrap_verilog_in_rust_hdl_macro"
description = "A proc-macro to wrap Verilog code in a rust-hdl module"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = "2.0.18"
proc-macro-error = "1.0.4"
rust-hdl = "0.45.1"
extract_rust_hdl_interface.workspace = true

[dev-dependencies]
trybuild = "1.0.79"
