[package]
name = "multiple_modules"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
rust-hdl = "0.45.1"
rust_hls_macro.workspace = true

[build-dependencies]
rust_hls = { workspace = true, features = ["verilator"] }
